# frpdeck

./: .gitignore  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  configuration.md  development.md  release.md
docs/release-notes/: 1.1.0.md  1.1.1.md  1.1.2.md  1.1.3.md  1.1.4.md
examples/client-node/: proxies.yaml
examples/client-node/rendered/: frpc.toml
examples/client-node/rendered/proxies.d/: grape_ssh_tcp.toml  grape_web_http.toml
examples/client-node/rendered/systemd/: frpdeck-client-node-frpc.service
src/frpdeck/: __init__.py  __main__.py  cli.py  version.py
src/frpdeck/commands/: __init__.py  _download_progress.py  _invocation.py  _privilege.py  apply.py  audit.py  check_update.py  doctor.py  init.py  mcp.py  output.py  proxy.py  reload.py  render.py  restart.py  status.py  sync.py  uninstall.py  upgrade.py  validate.py
src/frpdeck/config/: __init__.py  instance.py  merge.py  resources.py
src/frpdeck/config_defaults/: node_client.json  node_server.json  scaffold_client_overrides.json  scaffold_instance_layout.json  scaffold_proxy_file_overrides.json  scaffold_server_overrides.json  scaffold_token_example.json
src/frpdeck/domain/: __init__.py  client_config.py  enums.py  errors.py  facade_models.py  frpdeck_logging.py  install.py  paths.py  proxy.py  proxy_management.py  server_config.py  state.py  status_models.py  systemd.py  versioning.py
src/frpdeck/facade/: __init__.py  proxy_facade.py
src/frpdeck/logging/: __init__.py  daily_symlink.py
src/frpdeck/mcp/: __init__.py  resources.py  serialization.py  server.py  tools.py
src/frpdeck/services/: __init__.py  apply_service.py  audit.py  backup.py  doctor.py  downloader.py  installer.py  privilege.py  proxy_manager.py  release_checker.py  renderer.py  runtime.py  scaffold.py  status.py  status_service.py  systemd_manager.py  uninstall.py  verifier.py
src/frpdeck/storage/: __init__.py  dump.py  file_lock.py  load.py
src/frpdeck/templates/: frpc.base.toml.j2  frps.base.toml.j2
src/frpdeck/templates/proxies/: http.toml.j2  https.toml.j2  tcp.toml.j2  udp.toml.j2
src/frpdeck/templates/systemd/: frpc.service.j2  frps.service.j2
tests/: __init__.py  support.py  test_apply_service.py  test_cli.py  test_config_resources.py  test_downloader.py  test_installer.py  test_mcp_server.py  test_models.py  test_package_exports.py  test_paths.py  test_privilege.py  test_proxy_facade.py  test_proxy_manager.py  test_release_checker.py  test_renderer.py  test_runtime.py  test_runtime_logging.py  test_status_service.py  test_storage_load.py  test_uninstall.py
tests/fixtures/instances/client-node/: node.yaml  proxies.yaml
tests/fixtures/instances/server-node/: node.yaml
