[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frpdeck"
dynamic = ["version"]
description = "Lightweight FRP deployment and maintenance CLI with structured proxy management, audit logging, and MCP support for LLM-assisted operations."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
  { name = "Hanwen Zheng", email = "eserie.fox@outlook.com" }
]
keywords = ["frp", "proxy", "deployment", "ops", "mcp", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Systems Administration",
  "Topic :: System :: Networking",
]
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "mcp>=1.26",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/eserie-fox/frpdeck"
Repository = "https://github.com/eserie-fox/frpdeck"
Issues = "https://github.com/eserie-fox/frpdeck/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
frpdeck = "frpdeck.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frpdeck = ["templates/**/*.j2", "config_defaults/**/*.json"]

[tool.setuptools.dynamic]
version = {attr = "frpdeck.version.__version__"}

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
